# duckdb-faker

./: .clang-format  .gitignore  .gitmodules  AGENT.md  CLAUDE.md  CMakeLists.txt  Makefile
scripts/: run-format.sh
src/: faker_extension.cpp
src/include/: faker_extension.hpp
src/table_functions/: booleans.cpp  booleans.hpp  generator_global_state.cpp  generator_global_state.hpp  numbers.cpp  numbers.hpp  probability_distributions.hpp  random_data.cpp  random_data.hpp  rowid_generator.cpp  rowid_generator.hpp  string_casing.hpp  strings.cpp  strings.hpp
src/utils/: client_context.hpp  database_instance.hpp  extension_loader_decl.hpp
test/: CMakeLists.txt  test_booleans.cpp  test_numbers.cpp  test_random_data.cpp  test_rowid.cpp  test_shared.cpp  test_strings.cpp  test_utilities.cpp
test/test_helpers/: database_fixture.hpp
